// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly 1`] = `
<DocumentFragment>
  <div
    class="c-alert"
    data-name="alert"
    role="alert"
  >
    lorem
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly a dismissable success alert 1`] = `
<DocumentFragment>
  <div
    class="c-alert c-alert--success"
    data-name="alert"
    role="alert"
  >
    lorem
    <button
      class="c-button c-button--close"
      type="button"
    >
      ×
    </button>
  </div>
</DocumentFragment>
`;
